feat(api): support expanded community tabs
